# taskApp

./: .gitignore  README.md  k22084 _作業報告.md  k22084 作業報告  k22113_作業報告レポート.md  k22113_作業報告レポート2.md  k22113_作業報告レポート3.md  main.py  pyproject.toml  requirements.txt  todo_data.json
instance/: todo.sqlite
modules/: __init__.py  memo.py  pomodoro.py  todo.py
modules/instance/: todo.sqlite
modules/templates/: index.html
static/: style.css
static/data/: memo_data.json  pomodoro.json  todo_data.json
static/scripts/: memo.js  pomodoro.js
static/styles/: memo.css  todo.css
static/todo/: style.css
templates/: index.html  memo.html  pomodoro.html  todo.html
