[tool.poetry]
name = "taskapp"
version = "0.1.0"
description = ""
authors = ["nakayama900 <49431394+nakayama900@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
